--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -14,4 +14,16 @@ body {
   svg {
     transition: all 0.4s ease-in-out;
   }
+  h1 {
+    font-family: Prata sans-serif;
+  }
+  input {
+    outline: none;
+    border: 1px rgb(219, 219, 219) solid;
+    padding: 4px;
+    border-radius: 4px;
+    &:focus {
+      border: 1px black solid;
+    }
+  }
 }
