--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
   // GLOBAL STYLEING SHIT
   button,
   input,
@@ -29,5 +30,6 @@ body {
   img{
     width: auto;
     height: auto;
+    object-fit: cover;
   }
 }
