--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -18,6 +18,7 @@ body {
   h1 {
     font-family: Prata sans-serif;
   }
+  a.active{color: black;}
   input {
     outline: none;
     border: 1px rgb(219, 219, 219) solid;
